err/traclus-impl.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simanneal'...
Listing './lib/python3.5/site-packages/simanneal-0.4.1.dist-info'...
Listing './lib/python3.5/site-packages/traclus_impl'...
Listing './lib/python3.5/site-packages/traclus_impl/integ_tests'...
Listing './lib/python3.5/site-packages/traclus_impl/integ_tests/coordination'...
Listing './lib/python3.5/site-packages/traclus_impl/integ_tests/deer_tests'...
Compiling './lib/python3.5/site-packages/traclus_impl/integ_tests/deer_tests/deer_file_reader.py'...
***   File "./lib/python3.5/site-packages/traclus_impl/integ_tests/deer_tests/deer_file_reader.py", line 29
    print "error on index " + str(i) + " with id " + str(id)
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/traclus_impl/integ_tests/deer_tests/traclus_runner.py'...
***   File "./lib/python3.5/site-packages/traclus_impl/integ_tests/deer_tests/traclus_runner.py", line 18
    print "heres the output: " + str(traj_res)
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/traclus_impl/integ_tests/parameter_estimation'...
Listing './lib/python3.5/site-packages/traclus_impl/integ_tests/partitioning'...
Listing './lib/python3.5/site-packages/traclus_impl/integ_tests/post_processing_connection_finding'...
Listing './lib/python3.5/site-packages/traclus_impl/integ_tests/representative_line_segments'...
Compiling './lib/python3.5/site-packages/traclus_impl/simulated_annealing.py'...
***   File "./lib/python3.5/site-packages/traclus_impl/simulated_annealing.py", line 31
    print rand_val
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/traclus_impl/tests'...
Listing './lib/python3.5/site-packages/traclus_impl/tests/clustering'...
Listing './lib/python3.5/site-packages/traclus_impl/tests/coordination'...
Listing './lib/python3.5/site-packages/traclus_impl/tests/partitioning'...
Listing './lib/python3.5/site-packages/traclus_impl-0.999.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
